<resources>
    <string name="app_name">Register UI Demo</string>


    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_mobile">Mobile</string>
    <string name="hint_password">Password</string>

    <!--text sizes-->
    <dimen name="error_message_text_size">11sp</dimen>
    <dimen name="title_text_size">33sp</dimen>
    <dimen name="sub_text_size">18sp</dimen>
    <dimen name="input_text_size">16sp</dimen>
    <dimen name="login_text_size">16sp</dimen>


    <!--<dimen name="input_top_margin">10dp</dimen>-->
    <!--<dimen name="input_outer_padding">2dp</dimen>-->
    <!--<dimen name="input_inner_padding">3dp</dimen>-->
    <!--<dimen name="input_padding_bottom_extra">8dp</dimen>-->
    <!--<dimen name="input_padding_left">8dp</dimen>-->

    <dimen name="input_top_margin">10dp</dimen>
    <dimen name="input_outer_padding">3dp</dimen>
    <dimen name="input_inner_padding">1dp</dimen>
    <dimen name="input_padding_bottom_extra">4dp</dimen>
    <dimen name="input_padding_left">8dp</dimen>


    <dimen name="button_padding">10dp</dimen>
    <dimen name="login_top_margin">45dp</dimen>

    <!--poplayout dimensions-->

    <dimen name="popup_font_size">12sp</dimen>
    <dimen name="padding_poplayout">5dp</dimen>
    <dimen name="margin_top_cell_poplayout">2dp</dimen>
    <dimen name="margin_left_cell_poplayout">10dp</dimen>
    <dimen name="margin_right_cell_poplayout">10dp</dimen>
    <dimen name="margin_left_cell_text">10dp</dimen>
    <string name="title_activity_terms_and_condition">TermsAndCondition</string>
    <string name="title_activity_login">Login</string>

    <!--terms and condition screen-->
    <dimen name="terms_text_size">16sp</dimen>
</resources>
