<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:background="@color/eggplant"
        android:scrollbars="none">

        <FrameLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent">

            <include
                android:visibility="invisible"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/pop"
                layout="@layout/popup_layout"/>

            <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Simpli"
                android:layout_gravity="right"
                android:gravity="right"
                android:textSize="@dimen/title_text_size"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:gravity="left"
                android:text="Claim"
                android:textSize="@dimen/title_text_size"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_regular"/>

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:text="Register as"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="@dimen/sub_text_size"
            android:textColor="@color/turquoise_green"
            android:fontFamily="@font/poppins_bold"/>

        <TextView
            android:id="@+id/tv_global_error"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:textColor="@color/pink_error"
            android:fontFamily="@font/poppins_light"
            android:gravity="center"
            android:drawableLeft="@mipmap/icon_error"
            android:textSize="@dimen/error_message_text_size"
            android:text=" Please fill all fields properly"
            android:visibility="gone"/>

        <!--first name and last name inputs-->
        <LinearLayout
            android:id="@+id/ll_name"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center"
            android:background="@drawable/rounded_drawable_background">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/input_padding_left"
                android:layout_marginBottom="@dimen/input_padding_bottom_extra"
                android:layout_weight="1"
                android:padding="@dimen/input_outer_padding"
                android:textColorHint="@color/perry_winkle"
                android:hint="@string/hint_last_name"
                android:layout_gravity="center">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/input_inner_padding"
                    android:textSize="@dimen/input_text_size"
                    android:fontFamily="@font/poppins_light"
                    android:inputType="text"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:background="@null"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/input_padding_bottom_extra"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/input_top_margin"
                android:padding="@dimen/input_outer_padding"
                android:hint="@string/hint_first_name"
                android:textColorHint="@color/perry_winkle"
                android:gravity="center">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/input_inner_padding"
                    android:textSize="@dimen/input_text_size"
                    android:fontFamily="@font/poppins_light"
                    android:inputType="text"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:background="@null"/>

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_name_error"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:includeFontPadding="false"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/pink_error"
            android:fontFamily="@font/poppins_light"
            android:gravity="center"
            android:text="Invalid Name"
            android:textSize="@dimen/error_message_text_size"
            android:visibility="gone"/>

    <!--email input-->
    <LinearLayout
        android:id="@+id/ll_email"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/input_top_margin"
        android:gravity="center"
        android:background="@drawable/rounded_drawable_background">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/input_padding_left"
            android:layout_marginBottom="@dimen/input_padding_bottom_extra"
            android:padding="@dimen/input_outer_padding"
            android:textColorHint="@color/perry_winkle"
            android:hint="@string/hint_email"
            android:gravity="center"
            android:layout_gravity="center">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/input_inner_padding"
                android:textSize="@dimen/input_text_size"
                android:fontFamily="@font/poppins_light"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:background="@null"/>

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

        <TextView
            android:id="@+id/tv_email_error"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/pink_error"
            android:fontFamily="@font/poppins_light"
            android:gravity="center"
            android:text="Invalid Email"
            android:includeFontPadding="false"
            android:textSize="@dimen/error_message_text_size"
            android:visibility="gone"/>

        <!--mobile input-->
    <LinearLayout
        android:id="@+id/ll_mobile"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/input_top_margin"
            android:background="@drawable/rounded_drawable_background">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/input_padding_left"
                android:layout_marginBottom="@dimen/input_padding_bottom_extra"
                android:padding="@dimen/input_outer_padding"
                android:textColorHint="@color/perry_winkle"
                android:hint="@string/hint_mobile"
                android:layout_gravity="center">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/input_inner_padding"
                    android:textSize="@dimen/input_text_size"
                    android:fontFamily="@font/poppins_light"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:digits="0123456789"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:background="@null"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_mobile_error"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:includeFontPadding="false"
            android:textColor="@color/pink_error"
            android:fontFamily="@font/poppins_light"
            android:gravity="center"
            android:text="Invalid Mobile Number"
            android:textSize="@dimen/error_message_text_size"
            android:visibility="gone"/>


        <!--password input-->
        <LinearLayout
            android:id="@+id/ll_password"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/input_top_margin"
            android:background="@drawable/rounded_drawable_background">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/input_padding_left"
                android:layout_marginBottom="@dimen/input_padding_bottom_extra"
                android:layout_weight="1"
                android:padding="@dimen/input_outer_padding"
                android:textColorHint="@color/perry_winkle"
                android:hint="@string/hint_password"
                android:layout_gravity="center">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/input_inner_padding"
                    android:textSize="@dimen/input_text_size"
                    android:fontFamily="@font/poppins_light"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:lines="1"
                    android:background="@null"/>
            </android.support.design.widget.TextInputLayout>


            <LinearLayout
                android:id="@+id/ll_password_strength"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_margin="5dp"
                android:gravity="left"
                android:paddingLeft="@dimen/input_padding_left"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/tv_password_strength"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="STRENGTH"
                    android:textSize="12sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/poppins_medium"/>

                <ImageView
                    android:id="@+id/iv_strength"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:src="@mipmap/group_blank"
                    android:layout_marginTop="3dp"/>

            </LinearLayout>

            <ImageButton
                android:id="@+id/ib_eye"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginLeft="@dimen/input_padding_left"
                android:layout_marginRight="15dp"
                android:src="@mipmap/eye"
                android:background="@null"
                android:layout_gravity="center_vertical"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_password_error"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:includeFontPadding="false"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/pink_error"
            android:fontFamily="@font/poppins_light"
            android:gravity="center"
            android:text="You have entered an invalid password"
            android:textSize="@dimen/error_message_text_size"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tvbtn_register"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/input_top_margin"
            android:text="Register"
            android:textColor="@color/white"
            android:textSize="@dimen/input_text_size"
            android:padding="@dimen/button_padding"
            android:gravity="center"
            android:fontFamily="@font/poppins_semibold"
            android:background="@drawable/rounded_drawable_background_button"/>

        <TextView
            android:id="@+id/tv_tandc_one"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/input_top_margin"
            android:textColor="@color/deep_lilac_two"
            android:fontFamily="@font/poppins_light"
            android:gravity="center"
            android:text="By tapping register, I agree to SimpliClaim"/>

        <TextView
            android:id="@+id/tv_tandc_two"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:lineHeight="0px"
            android:includeFontPadding="false"
            android:gravity="center"
            android:textColor="@color/turquoise_green"
            android:fontFamily="@font/poppins_light"
            android:text="Terms &amp; Conditions"/>


        <TextView
            android:id="@+id/tvbtn_login"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/login_top_margin"
            android:gravity="center"
            android:textColor="@color/turquoise_green"
            android:textSize="@dimen/login_text_size"
            android:fontFamily="@font/poppins_medium"
            android:text="Login"/>

    </LinearLayout>
        </FrameLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>